--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,12 @@
 
-* {
-	padding: 0;
-	margin: 0;
-	
-	box-sizing: border-box;
-	text-decoration: none;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Source Sans 3', sans-serif;
+    text-decoration: none;
 }
+/**/
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -14,7 +15,6 @@ body {
 	background-attachment: fixed;
 	background-image: url(fondo.jpg);	
 }
-
 
 .contenedor {
 	margin: auto;
@@ -25,96 +25,170 @@ body {
 	flex-wrap:wrap;
 }
 
-.titulo1{
-    width: 100%;
-    padding-bottom: 10px;
-    padding-top: 50px;
-    display: flex;
-	justify-content:center;
-	align-items:center;
-	font-family:Matura MT Script Capitals;
-	font-size:50px;
-} 
-
-/*MODIFICADO*/
-/*main agregado 06/03*/
-
-	nav ul li {
-	  
-	  
-	 
-	  
-	  
-	  margin: 15px;
-	  border-radius: 10px; 
-	  
-	  
-	 
-	
-	}
-	.naveg li:first-child{
-		display: block;
-	}
-.naveg li a{
-	color: #513B3C;
-
-}
-	
-.subnav > li {	  
-	width: 130px;
-	transform: translateX(-25px);
-	
-	margin: 2px;  
-	text-align: center;
-	background-color:#667767; 
-	
-	}
-.subnav > li:hover{
-	margin: 0px 12px;}
-	
-.develop:hover > .subnav{
-	display: block;
-	
-	}
-
-.subnav{
-	display: none;
-	position: absolute;  
-	padding: 10px;
-	}
-	 
 
 
-/*reuso*/
+
+
+
+
+
+
+
+
+
+
 header{
-	background:#dee8d594;
+    
 	width: 100%;
-	padding: 20px ;
-    display: flex;
+	
+	display: flex;
 	flex-direction:column;
 	flex-wrap:wrap;
-	align-items:center;
-}
-.naveg{
-	
-	
-	font-size: 20px;
-	font-family:Matura MT Script Capitals;
-	
-
-
-
-
-	display: flex;
 	align-items: center;
-	list-style: none;
-	margin-right: 20px;
+	
 }
-.naveg li:hover{
-	background:#79b98e;
-	padding:2px;
+
+
+/*HEADER SUPERIOR*/
+
+
+
+/*BARRA MENU*/
+
+.container__menu{
+    width: 100%;
+    height: 70px;
+    background:#dee8d594;
+    padding: 0px 20px;
 
 }
+
+.menu{
+    max-width: 1200px;
+    margin: auto;
+    height: 100%;
+	
+}
+
+nav{
+    height: 100%;
+	
+}
+
+nav > ul{
+    height: 100%;
+    display: flex;
+}
+
+nav ul li{
+    height: 100%;
+    list-style: none;
+    position: relative;
+	
+}
+.menu li a{
+	color: #000000;
+	
+}
+/**/
+
+nav > ul > li:first-child > a{
+    background-image: url(home.png);
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 20px 40px;
+}
+
+nav > ul > li:first-child:hover > a{
+    background-image: url(home.png);
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+nav > ul > li > a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 14px;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    transition: all 300ms ease;
+}
+
+nav > ul > li > a:hover{
+    transform: scale(1.1);
+    background: #227e40;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+#selected{
+    transform: scale(1.1);
+    background-color: #3ee295;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+
+/*SUBMENU*/
+
+nav ul li ul{
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    background: rgb(43, 194, 89);
+    position: absolute;
+    top: 90px;
+    left: -5px;
+    padding: 14px 0px;
+    visibility: hidden;
+    opacity: 0;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    z-index: 10;
+    transition: all 300ms ease;
+}
+
+nav ul li:hover ul{
+    visibility: visible;
+    opacity: 1;
+    top: 70px;
+}
+
+nav ul li ul:before{
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 12px solid white;
+    position: absolute;
+    top: -12px;
+    left: 20px;
+}
+
+nav ul li ul li a{
+    display: block;
+    color: #0099E9;
+    padding: 6px;
+    padding-left: 14px;
+    margin-top: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+    transition: all 300ms ease;
+}
+
+nav ul li ul li a:hover{
+    background: #41773c;
+    color: #fff;
+    transform: scale(1.2);
+    padding-left: 30px;
+    font-size: 14px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+/*ARTICULO*/
 
 
 .main {
@@ -123,10 +197,9 @@ header{
 	width: 70%;
 }
 
-/**/
 aside {
 	width: 30%;
-	background: #ffffffde;
+	background: #FFFFFFde;
 	padding: 30px;
 	
 	display: flex;
@@ -134,7 +207,6 @@ aside {
 	flex-wrap:wrap;
 	justify-content:space-between;
 }
-
 .img1{
 	width:100%;
 }
@@ -216,6 +288,101 @@ footer {
 
 
 
+
+
+
+
+
+
+/*ELEMENTOS RESPONSIVOS*/
+
+.icon__menu{
+    font-size: 26px;
+    color: white;
+    cursor: pointer;
+    width: 26px;
+    height: 100%;
+    display: none;
+    align-items: center;
+}
+
+#label__check{
+    width: 26px;
+    height: 100%;
+    display: none;
+}
+
+#check__menu{
+    display: none;
+}
+
+@media screen and (max-width: 720px){
+
+    .search input{
+        display: none;
+    }
+    
+    .header__superior{
+        padding: 10px;
+    }
+
+    .logo img{
+        width: 200px;
+    }
+
+    nav > ul{
+        flex-direction: column;
+        background: #41773c;
+        position: fixed;
+        left: 0;
+        top: 158px;
+        width: 100%;
+        height: 0px;
+        transition: all 300ms ease;
+        z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    nav > ul > li > a:hover{
+        transform: scale(1);
+    }
+
+    nav ul li ul{
+        left: 90px;
+    }
+
+    nav > ul > li:hover ul{
+        top: 50px;
+    }
+
+    nav > ul > li:first-child a{
+        background-position: 20px;
+    }
+
+    #selected{
+        transform: scale(1);
+    }
+
+    #label__check{
+        display: block;
+    }
+
+    .icon__menu{
+        display: flex;
+    }
+
+    #check__menu:checked ~ nav > ul{
+        height: 200px;
+        visibility: visible;
+        opacity: 1;
+    }
+
+    
+}
+
+/*query clasico*/
+
 @media screen and (max-width: 800px) {
 	.main {
 		width: 100%;
@@ -232,32 +399,72 @@ footer {
 		display: none;
 	}
 }
-/*DESDE AQUI HASTA ABAJO NO FUNCIONA*/
-/*menu reductor*/
-.responsive li {
-	display: block;
-}
+
+ /*ESTLOS PARA EL FORMULARIO*/
+  
+ .form-register {
+    width: 400px;
+    background:#bb9578 ;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px;
+    font-family: 'calibri';
+    color: white;
+    box-shadow: 7px 13px 37px #000;
+  }
+  
+  .form-register h4 {
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+  
+  .datos {
+    width: 100%;
+    background: #e7ceba;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #ff9645;
+    font-family: 'calibri';
+    font-size: 18px;
+    color: rgb(0, 0, 0);
+  }
+  
+  .form-register p {
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 40px;
+  }
+  
+  .form-register a {
+    color: white;
+    text-decoration: none;
+  }
+  
+  .form-register a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  
+  .form-register .botons {
+    width: 100%;
+    background: #bb743e;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+  }
+
+  /*animado*/
 
 
-@media only screen and (min-width:32.5em){
-	.naveg {
-		display:flex;
-	}
-	.naveg li:first-child{
-		display: none;
-	}
-	.naveg li{
-		display: block;
-		flex: 1 1 100%;
-	}
-	.naveg li a {
-		color: rgb(2, 2, 2);
-	}
-}
 .logotipo{
-	font-family:Matura MT Script Capitals;
+	font-family: 'Times New Roman', Times, serif;
 	padding: 10px;
-	color: white
+	color: rgb(255, 255, 255);
 }
 .texto-animado{
 	display: flex;
@@ -281,4 +488,12 @@ footer {
 .texto-animado .segunda-linea {
 	position: absolute;
 	top: 80px;
+}
+/*BIBLIOGRAFIA*/
+.articc{
+	border: 1px solid #000000;
+	padding:30px;
+	background: #41773c;
+
+
 }
